<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/ball"
    android:orientation="vertical"
    tools:context="com.example.android.footballupdates.MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="5dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:fontFamily="serif"
            android:text="@string/teamA"
            android:textAlignment="center"
            android:textColor="#000000"
            android:textSize="25sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:fontFamily="serif"
            android:text="@string/teamB"
            android:textAlignment="center"
            android:textColor="#000000"
            android:textSize="25sp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="50dp"
            android:layout_height="40dp"
            android:layout_weight="1"
            android:contentDescription="barca logo"
            android:src="@drawable/barca" />

        <View
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:background="#000000" />

        <ImageView
            android:layout_width="50dp"
            android:layout_height="40dp"
            android:layout_weight="1"
            android:contentDescription="madrid logo"
            android:src="@drawable/madrid" />

    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="15dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="210dp"
            android:alpha=".3"
            android:background="#000" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/barca_goals"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:fontFamily="serif"
                    android:text="@string/team_a_score"
                    android:textAlignment="center"
                    android:textColor="#000"
                    android:textSize="80sp" />


                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:fontFamily="serif"
                    android:text="-"
                    android:textColor="#000"
                    android:textSize="60sp"
                    android:textStyle="bold" />


                <TextView
                    android:id="@+id/madrid_goals"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:fontFamily="serif"
                    android:text="@string/team_b_score"
                    android:textAlignment="center"
                    android:textColor="#000"
                    android:textSize="80sp" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="5dp">

                <TextView
                    android:id="@+id/barca_shots"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="3"
                    android:fontFamily="serif"
                    android:text="@string/team_a_shots"
                    android:textAlignment="center"
                    android:textColor="#000"
                    android:textSize="22sp" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:fontFamily="serif"
                    android:text="@string/shot_text"
                    android:textAlignment="center"
                    android:textColor="#000"
                    android:textSize="20sp" />

                <TextView
                    android:id="@+id/madrid_shots"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="3"
                    android:fontFamily="serif"
                    android:text="@string/team_b_shots"
                    android:textAlignment="center"
                    android:textColor="#000"
                    android:textSize="22sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:paddingLeft="5dp"
                android:paddingRight="5dp">

                <TextView
                    android:id="@+id/barca_foul"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="3"
                    android:fontFamily="serif"
                    android:text="@string/team_a_foul"
                    android:textAlignment="center"
                    android:textColor="#000"
                    android:textSize="22sp" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:fontFamily="serif"
                    android:text="@string/foul"
                    android:textAlignment="center"
                    android:textColor="#000"
                    android:textSize="20sp" />

                <TextView
                    android:id="@+id/madrid_foul"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="3"
                    android:fontFamily="serif"
                    android:text="@string/team_b_foul"
                    android:textAlignment="center"
                    android:textColor="#000"
                    android:textSize="22sp" />
            </LinearLayout>
        </LinearLayout>
    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingBottom="25dp"
        android:paddingTop="25dp">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">

            <Button
                android:layout_width="100dp"
                android:layout_height="40dp"
                android:layout_gravity="center_horizontal"
                android:layout_margin="5dp"
                android:background="@drawable/buttonstyle"
                android:fontFamily="serif"
                android:onClick="addBarcaGoal"
                android:text="@string/goal_button"
                android:textAllCaps="false" />

            <Button
                android:layout_width="100dp"
                android:layout_height="40dp"
                android:layout_gravity="center_horizontal"
                android:layout_margin="5dp"
                android:background="@drawable/buttonstyle"
                android:fontFamily="serif"
                android:onClick="addBarcaShots"
                android:text="@string/shot_button"
                android:textAllCaps="false" />

            <Button
                android:layout_width="100dp"
                android:layout_height="40dp"
                android:layout_gravity="center_horizontal"
                android:layout_margin="5dp"
                android:background="@drawable/buttonstyle"
                android:fontFamily="serif"
                android:onClick="addBarcaFoul"
                android:text="@string/foul"
                android:textAllCaps="false" />
        </LinearLayout>

        <View
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:background="#000" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">

            <Button
                android:layout_width="100dp"
                android:layout_height="40dp"
                android:layout_gravity="center_horizontal"
                android:layout_margin="5dp"
                android:background="@drawable/buttonstyle"
                android:fontFamily="serif"
                android:onClick="addMadridGoal"
                android:text="@string/goal_button"
                android:textAllCaps="false" />

            <Button
                android:layout_width="100dp"
                android:layout_height="40dp"
                android:layout_gravity="center_horizontal"
                android:layout_margin="5dp"
                android:background="@drawable/buttonstyle"
                android:fontFamily="serif"
                android:onClick="addMadridShots"
                android:text="@string/shot_button"
                android:textAllCaps="false" />

            <Button
                android:layout_width="100dp"
                android:layout_height="40dp"
                android:layout_gravity="center_horizontal"
                android:layout_margin="5dp"
                android:background="@drawable/buttonstyle"
                android:fontFamily="serif"
                android:onClick="addMadridFoul"
                android:text="@string/foul"
                android:textAllCaps="false" />
        </LinearLayout>
    </LinearLayout>

    <Button
        android:layout_width="100dp"
        android:layout_height="40dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="15dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/buttonstyle"
        android:fontFamily="serif"
        android:onClick="resetScore"
        android:text="@string/reset_button" />

</LinearLayout>
